secure-gate-core/tests/compile-fail/compat_no_asref.stderr
error[E0277]: the trait bound `Secret<String>: AsRef<str>` is not satisfied
  --> tests/compile-fail/compat_no_asref.rs:13:19
   |
13 |     needs_str_ref(&s);
   |     ------------- ^^ the trait `AsRef<str>` is not implemented for `Secret<String>`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_str_ref`
  --> tests/compile-fail/compat_no_asref.rs:6:21
   |
6  | fn needs_str_ref<T: AsRef<str>>(t: &T) {
   |                     ^^^^^^^^^^ required by this bound in `needs_str_ref`
